<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">WFCARDV360</string>
    <string name="searching">Searching..</string>
    <string name="action_delete">Delete</string>
    <string name="remote">Recorder</string>
    <string name="photo">Picture</string>
    <string name="video">Video</string>
    <string name="phone">Phone</string>
    <string name="set_isneedformat">Confirm format recorder</string>
    <string name="disconnect">Disconnect</string>
    <string name="please_wait">Please Wait</string>
    <string name="navi_confDel">Do you want to delete it?</string>
    <string name="noNetWork">There are not  Network</string>
    <string name="wifi_stoprecordingbef">Please stop recording</string>
    <string name="wifi_downloading">Download</string>
    <string name="wifi_waitdownload">Waiting</string>
    <string name="wifi_continuedownload">Continue to download</string>
    <string name="wifi_retrydownload">retry</string>
    <string name="wifi_pausedownload">Suspended, click may continue to download</string>
    <string name="wifi_stopwarning">warning</string>
    <string name="wifi_checkmessage">Whether to connect camera?</string>
    <string name="saved_successfully">Save successful </string>
    <string name="wifi_system_reset_success">To restore factory Settings successful</string>
    <string name="wifi_format_sd_success">Format Successful</string>
    <string name="wifi_system_reset_failure">To restore factory Settings failure</string>
    <string name="wifi_format_sd_failure">formatting failed</string>
    <string name="wifi_connecting">Connection, please later!</string>
    <string name="camset_name">Modify the name</string>
    <string name="camset_original_name">Original Name:</string>
    <string name="camset_setpwd">Set the recorder password</string>
    <string name="camset_autorec">Auto Record</string>
    <string name="camset_motiondetection">Motion Detection</string>
    <string name="camset_recquality">Rec Quality</string>
    <string name="camset_pip">PIP</string>
    <string name="camset_format">Format</string>
    <string name="camset_advset">Advanced settings</string>
    <string name="camset_gsensor_level">Impact sensitivity</string>
    <string name="camset_rec_time">The recording file time</string>
    <string name="camset_recovery">factory reset </string>
    <string name="camset_recovery_question">Confirm to restore factory Settings?</string>
    <string name="wifi_camera_storage">The memory card is full!</string>
    <string name="wifi_name_modified_successfully">Modify the name success</string>
    <string name="wifi_name_modified_fail">Modify the name failure</string>
    <string name="wifi_sdcard">No SD Card, please insert the sd card</string>
    <string name="wifi_password_modified_successfully">modify password success</string>
    <string name="wifi_password_modified_fail">Failed to modify password </string>
    <string name="not_get_the_current_version_information">did not get the current version information</string>
    <string name="no_access_the_server_information">No access the server information</string>
    <string name="failed_to_get_server_information">Failed to get server information</string>
    <string name="current_is_last_version">current is last version</string>
    <string name="ota_downtitle">DownLoadManager</string>
    <string name="newcheckversion">The latest version</string>
    <string name="Updatecontent">Update prompt"</string>
    <string name="Immediateupdates">Update</string>
    <string name="Lateron">Next</string>
    <string name="nonetwork">No available network</string>
    <string name="download_newversion_failed">Download the new version failed</string>
    <string name="ota_downloading">Download...</string>
    <string name="ota_nowpercent">Current progress:</string>
    <string name="ota_predownload">Ready to download</string>
    <string name="ota_serviceexp">Server exception, please try again later</string>
    <string name="ota_netorserexp">The network or server is unusual, please try again later</string>
    <string name="list_wifi_name">Nearby WIFI</string>
    <string name="wifi_add_connect">Add</string>
    <string name="wifi_input_password">Enter the password!</string>
    <string name="wifi_least_password">Password no less than 3 digits</string>
    <string name="wifi_choose">Please select your WIFI to connect</string>
    <string name="version_detection">Check Update</string>
    <string name="ok">OK</string>
    <string name="confirm_password">confirm new password</string>
    <string name="enter_password">Enter New Password</string>
    <string name="password_inconsistent">The password you entered do not agree with confirm password</string>
    <string name="password_too_short">The password you entered is less than eight figures, cannot be modified</string>
    <string name="close">close</string>
    <string name="low">low</string>
    <string name="middle">middle</string>
    <string name="high">high</string>
    <string name="three_minute">three minute</string>
    <string name="five_minute">five minute</string>
    <string name="ten_minute">ten minute</string>
    <string name="confirm">confirm</string>
    <string name="cancel">cancel</string>
    <string name="wheter_delete_file">Whether to delete the file or files?</string>
    <string name="wheter_stop_record">Browsing files will lead to the camera to stop recording, whether to continue to operate?</string>
    <string name="loading">loading····</string>
    <string name="menu_quit">Logout</string>
    <string name="login">Login</string>
    <string name="phonenumber">Cell-phone number</string>
    <string name="email">email</string>
    <string name="emailerror">email fomat error</string>
    <string name="enter_phonenumber">Phone number</string>
    <string name="enter_email">Email address</string>
    <string name="enter_code">Code</string>
    <string name="password">Password</string>
    <string name="re_enter_password">Password</string>
    <string name="enter_password_again">Again</string>
    <string name="register">Register</string>
    <string name="re_confirm_password">Confirm password</string>
    <string name="immediately_register">Immediately register</string>
    <string name="account_password_notification">Account and password must not be empty!</string>
    <string name="hasregister">This user has been registered</string>
    <string name="usernotfound">This user has not found</string>
    <string name="userorpwderror">ERROR Incorrect username or password</string>
    <string name="reset">reset</string>
    <string name="code">code</string>
    <string name="sendcode">Get code</string>
    <string name="codenotifysucess">The verification code sent to the "%1$s", please note that check mail</string>
    <string name="resendcode">Resend(%02d)</string>
    <string name="resendtext">Resend</string>
    <string name="codetimeout">Verification code is invalid</string>
    <string name="codeerror">Verification code error</string>
    <string name="msg_center_no_download_files">Do not specify have the files, please take the pictures again</string>
    <string name="msg_center_downloading_files">Downloading pictures ...</string>
    <string name="msg_center_requst_files">getting image files...</string>
    <string name="msg_center_stop_recording">stop recording...</string>
    <string-array name="wifi_status">
        
        <item></item>
        
        <item>Scanning\u2026</item>
        
        <item>Connecting\u2026</item>
        
        <item>Authenticating\u2026</item>
        
        <item>Obtaining IP address\u2026</item>
        
        <item>Connected</item>
        
        <item>Suspended</item>
        
        <item>Disconnecting\u2026</item>
        
        <item>Disconnected</item>
        
        <item>Unsuccessful</item>
        
        <item>Blocked</item>
        
        <item>Temporarily avoiding poor connection</item>
    </string-array>
    <string-array name="wifi_status_with_ssid">
        
        <item></item>
        
        <item>Scanning\u2026</item>
        
        <item>Connecting to <xliff:g id="network_name">%1$s</xliff:g>\u2026</item>
        
        <item>Authenticating with <xliff:g id="network_name">%1$s</xliff:g>\u2026</item>
        
        <item>Obtaining IP address from <xliff:g id="network_name">%1$s</xliff:g>\u2026</item>
        
        <item>Connected to <xliff:g id="network_name">%1$s</xliff:g></item>
        
        <item>Suspended</item>
        
        <item>Disconnecting from <xliff:g id="network_name">%1$s</xliff:g>\u2026</item>
        
        <item>Disconnected</item>
        
        <item>Unsuccessful</item>
        
        <item>Blocked</item>
        
        <item>Temporarily avoiding poor connection</item>
    </string-array>
    <string name="network_timeout">network exception</string>
    <string name="permissiontext">Open<xliff:g id="permission">%1$s</xliff:g>Failed, please check whether the disabled<xliff:g id="permission1">%1$s</xliff:g>permission</string>
    <string name="setting">setting</string>
    <string name="update">update</string>
    <string name="latest_version">It\'s already the latest version</string>
    <string name="get">got it</string>
    <string name="collection">collection</string>
    <string name="Tirepressure_detection">TirePressure detection</string>
    <string name="progress_display">progress display</string>
    <string name="no_wifi">No wifi network, sure you want to download</string>
    <string name="send1">send</string>
    <string name="deleted_success">Deleted successfully</string>
    <string name="no_data">no data</string>
    <string name="no">No</string>
    <string name="save">save</string>
    <string name="deleted_failure">Delete failed, please check the network</string>
    <string name="upload_failed">Upload failed, please check the network</string>
    <string name="exit_program">Again according to exit the program</string>
    <string name="in_the_buffer">Is in the buffer...</string>
    <string name="Check_connection">Check the network connection!</string>
    <string name="Abnormal_play">Abnormal play!</string>
    <string name="In_the_download">In the download...</string>
    <string name="test_version">Is testing the version number</string>
    <string name="are_surveillance_cameras">surveying camera connecting</string>
    <string name="check_camera_connect_fails">check camera connect fails,whether connect immediately?</string>
    <string name="nickname">nickname</string>
    <string name="other">other</string>
    <string name="intrusive_advertising">intrusive advertising</string>
    <string name="obscene">obscene</string>
    <string name="olitical_sensitivities">olitical sensitivities</string>
    <string name="report_illegal">illegal</string>
    <string name="rumor">rumor</string>
    <string name="set_nickname">set nickname</string>
    <string name="phonenumber_prompt">Cell-phone number:</string>
    <string name="code_prompt">code:</string>
    <string name="email_prompt">Email:</string>
    <string name="password_prompt">Password:</string>
    <string name="re_confirm_password_prompt">Confirm password:</string>
    <string name="register_sucess">Registration successful, please modify the nickname</string>
    <string name="digits_email" translatable="false">1234567890qwertyuiopasdfghjklzxcvbnmQWERTYUIOPASDFGHJKLZXCVBNM@_.</string>
    <string name="digits_password" translatable="false">1234567890qwertyuiopasdfghjklzxcvbnmQWERTYUIOPASDFGHJKLZXCVBNM`!@#$%^*()-=_+[]{}|;:\'\",./?\\</string>
    <string name="secrecy">Secrecy</string>
    <string name="man">M</string>
    <string name="female">F</string>
    <string name="set_sex">Set sex</string>
    <string name="please_input_nickname">Input nickname</string>
    <string name="soft_protocol">《Software Protocol》</string>
    <string name="agree_with">Agree with</string>
</resources>