<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="#f2f2f2"
              android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@android:color/white">

        <ImageButton
            android:id="@+id/register_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:background="@drawable/jiantouslide_l"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:singleLine="true"
            android:text="@string/register"
            android:textColor="#fe9423"
            android:textSize="24sp"/>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/register_bg"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:gravity="center"
                android:text="@string/phonenumber_prompt"
                android:textColor="#a7a7a7"
                android:textSize="16sp"/>

            <EditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@null"
                android:hint="@string/enter_phonenumber"
                android:inputType="number"
                android:paddingLeft="10dp"
                android:textColorHint="#d7d7d7"
                android:textSize="16sp"/>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:background="#e4e4e4"></View>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:gravity="center"
                android:text="@string/code_prompt"
                android:textColor="#a7a7a7"
                android:textSize="16sp"/>

            <EditText
                android:id="@+id/code"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="@null"
                android:hint="@string/enter_code"
                android:inputType="textEmailAddress"
                android:paddingLeft="10dp"
                android:textColorHint="#d7d7d7"
                android:textSize="16sp"/>

            <Button
                android:id="@+id/sendcode"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:layout_marginRight="20dp"
                android:background="@drawable/register_btn_bg"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:text="@string/sendcode"
                android:textColor="@color/white"
                android:textSize="12sp"/>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:background="#e4e4e4"></View>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:gravity="center"
                android:text="@string/email_prompt"
                android:textColor="#a7a7a7"
                android:textSize="16sp"/>

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@null"
                android:digits="@string/digits_email"
                android:hint="@string/enter_email"
                android:paddingLeft="10dp"
                android:textColorHint="#d7d7d7"
                android:textSize="16sp"/>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:background="#e4e4e4"></View>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:gravity="center"
                android:text="@string/password_prompt"
                android:textColor="#a7a7a7"
                android:textSize="16sp"/>

            <EditText
                android:id="@+id/newPassWord"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@null"
                android:digits="@string/digits_password"
                android:hint="@string/enter_password"
                android:inputType="textPassword"
                android:maxLength="14"
                android:paddingLeft="10dp"
                android:textColorHint="#d7d7d7"
                android:textSize="16sp"/>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:background="#e4e4e4"></View>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:gravity="center"
                android:text="@string/re_confirm_password_prompt"
                android:textColor="#a7a7a7"
                android:textSize="16sp"/>

            <EditText
                android:id="@+id/twoPassWord"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@null"
                android:digits="@string/digits_password"
                android:hint="@string/enter_password_again"
                android:inputType="textPassword"
                android:maxLength="14"
                android:paddingLeft="10dp"
                android:textColorHint="#d7d7d7"
                android:textSize="16sp"/>
        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/cb_protocol"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:button="@drawable/bg_checkbox"
            android:checked="true"
            android:gravity="center"/>

        <TextView
            android:id="@+id/tv_protocol"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="5dp"
            android:background="#efefef"
            android:gravity="left|center"
            android:text="@string/agree_with"
            android:textColor="@color/gary"
            android:textSize="14dp"/>


        <Button
            android:id="@+id/btn_protocol"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@null"
            android:gravity="left|center"
            android:text="@string/soft_protocol"
            android:textColor="@color/orange"
            android:textSize="14dp"/>
    </LinearLayout>

    <Button
        android:id="@+id/quickRegister"
        android:layout_width="240dp"
        android:layout_height="45dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:background="@drawable/selector_login"
        android:text="@string/immediately_register"
        android:textColor="@android:color/white"/>


</LinearLayout>
