<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              tools:context="com.adai.gkdnavi.ReportActivity">

    <include
        layout="@layout/layout_include_head"/>

    <RadioGroup
        android:id="@+id/resons"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/left_margin">

        <RadioButton
            android:id="@+id/reson1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:button="@null"
            android:drawableRight="@drawable/bg_radio_select"
            android:padding="15dp"
            android:text="@string/obscene"
            android:textColor="@color/gray"
            android:textSize="20sp"/>

        <RadioButton
            android:id="@+id/reson2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:button="@null"
            android:drawableRight="@drawable/bg_radio_select"
            android:padding="15dp"
            android:text="@string/intrusive_advertising"
            android:textColor="@color/gray"
            android:textSize="20sp"/>

        <RadioButton
            android:id="@+id/reson3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:button="@null"
            android:drawableRight="@drawable/bg_radio_select"
            android:padding="15dp"
            android:text="@string/rumor"
            android:textColor="@color/gray"
            android:textSize="20sp"/>

        <RadioButton
            android:id="@+id/reson4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:button="@null"
            android:drawableRight="@drawable/bg_radio_select"
            android:padding="15dp"
            android:text="@string/olitical_sensitivities"
            android:textColor="@color/gray"
            android:textSize="20sp"/>

        <RadioButton
            android:id="@+id/reson5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:button="@null"
            android:drawableRight="@drawable/bg_radio_select"
            android:padding="15dp"
            android:text="@string/report_illegal"
            android:textColor="@color/gray"
            android:textSize="20sp"/>

        <RadioButton
            android:id="@+id/reson6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:button="@null"
            android:drawableRight="@drawable/bg_radio_select"
            android:padding="15dp"
            android:text="@string/other"
            android:textColor="@color/gray"
            android:textSize="20sp"/>
    </RadioGroup>
</LinearLayout>
