<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/white"
              android:orientation="vertical"
              android:paddingLeft="16dp"
              android:paddingRight="16dp">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:gravity="center"
        android:text="@string/set_nickname"
        android:textColor="@color/black"
        android:textSize="18sp"/>

    <EditText
        android:id="@+id/editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_edittext"
        android:hint="@string/please_input_nickname"
        android:maxLines="6"
        android:minLines="1"
        android:paddingBottom="8dp"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:paddingTop="8dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:orientation="horizontal"
        >

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_confirm"
            android:layout_width="96dp"
            android:layout_height="40dp"
            android:layout_marginRight="8dp"
            android:background="@drawable/selector_register"
            android:gravity="center"
            android:text="@string/ok"
            android:textColor="@color/selector_register_color"/>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_cancel"
            android:layout_width="96dp"
            android:layout_height="40dp"
            android:layout_marginLeft="8dp"
            android:background="@drawable/selector_register"
            android:gravity="center"
            android:text="@string/cancel"
            android:textColor="@color/selector_register_color"/>
    </LinearLayout>

</LinearLayout>