<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#eaeaea"
    android:orientation="vertical"
    tools:context="com.adai.gkdnavi.setSexActivity">

    <include layout="@layout/layout_include_head"/>

    <RadioGroup
        android:id="@+id/rg_sex"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">

        <android.support.v7.widget.AppCompatRadioButton
            android:id="@+id/rb_secret"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/secrecy"/>

        <android.support.v7.widget.AppCompatRadioButton
            android:id="@+id/rb_man"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/man"/>

        <android.support.v7.widget.AppCompatRadioButton
            android:id="@+id/rb_female"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/female"/>
    </RadioGroup>
</LinearLayout>
