<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <TextView 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/update"
        android:textSize="28sp"
        android:textColor="#febf26"
        android:layout_marginLeft="18dp"
        android:layout_marginTop="16dp"/>
    
    <View
        android:layout_width="wrap_content"
        android:layout_height="2dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:background="#febf26" />
    
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/latest_version"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="18dp"
            android:textColor="#80000000"
            android:textSize="20sp" />
    
    <Button 
        android:id="@+id/known"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:text="@string/get"
        android:layout_marginTop="30dp"
        android:textColor="#767777"
        android:background="@drawable/selector_know"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"/>
</LinearLayout>
