<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">
    <TextView
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_sucess"
        android:textSize="16sp"
        android:textColor="@color/orange"/>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nickname"
            android:textColor="@color/orange"
            android:textSize="16sp"
            android:layout_gravity="center_vertical"/>
        <EditText
            android:id="@+id/et_nickname"
            android:layout_gravity="center_vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <TextView
        android:id="@+id/confirm"
        android:text="@string/confirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="6dp"
        android:paddingBottom="6dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/bg_btn_empty"
        android:textColor="@color/orange"
        android:layout_gravity="center_horizontal"/>
</LinearLayout>